@@ -12,6 +12,91 @@ main_module = lib/Dist/Zilla/PluginBundle/Author/KENTNL.pm
 [Bootstrap::lib]
 try_built = 1
 
+[Prereqs]
+Dist::Zilla = 5.011
+
+[Prereqs / config_reqs]
+-phase = configure
+-relationship = requires
+File::ShareDir::Install = 0.10
+
+[Prereqs / softdeps]
+-phase = runtime
+-type = recommends
+Dist::Zilla::Plugin::Bootstrap::lib = 0.04000002
+Dist::Zilla::Plugin::PerlTidy = 0.14
+Dist::Zilla::Util::EmulatePhase = 0.01025803
+IO::Socket::SSL = 1.962
+LWP::Protocol::https = 6.04
+Moose = 2.1201
+MooseX::Has::Sugar = 1.000000
+MooseX::Types = 0.41
+Net::SSLeay = 1.57
+Perl::PrereqScanner = 1.019
+Pod::Coverage::TrustPod = 0.100003
+Pod::Elemental::PerlMunger = 0.200001
+Test::CPAN::Meta = 0.23
+Test::Pod = 1.48
+Test::Pod::Coverage = 1.08
+Test::EOL = 1.5
+namespace::autoclean = 0.15
+Test::Perl::Critic = 1.02
+
+[ModuleShareDirs]
+Dist::Zilla::MintingProfile::Author::KENTNL = share/profiles
+
+[RemovePhasedPrereqs]
+remove_runtime = Dist::Zilla::PluginBundle::Author::KENTNL
+remove_runtime = Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
+remove_develop = Dist::Zilla::PluginBundle::Author::KENTNL
+remove_develop = Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
+
+[Prereqs / criticspreqs]
+;Perl::Critic::Moose = 0.999_002
+-phase = runtime
+-type = recommends
+Perl::Critic::Itch = 0
+Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter = 0
+Perl::Critic::Pulp = 0
+Perl::Critic::More = 0
+Perl::Critic::Tics = 0
+Perl::Critic::StricterSubs = 0
+Perl::Critic::Deprecated = 0
+Perl::Critic::Lax = 0
+Perl::Critic::Compatibility = 0
+Perl::Critic::Swift = 0
+Perl::Critic::Bangs = 0
+
+[Prereqs / conditionalpreqs]
+-phase = runtime
+-type = recommends
+Dist::Zilla::Plugin::MakeMaker = 0
+Dist::Zilla::Plugin::ModuleBuild = 0
+Dist::Zilla::Plugin::ModuleBuildTiny = 0
+Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
+Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
+Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
+CHI = 0
+CHI::Driver::LMDB = 0
+LMDB_File = 0
+CPAN::Meta = 0
+CPAN::Meta::Prereqs::Diff = 0
+CPAN::Changes::Group::Dependencies::Stats = 0.002002
+CPAN::Changes::Dependencies::Details = 0.001000
+Data::Serializer::Sereal = 0
+Net::GitHub = 0
+JSON::MaybeXS = 0
+Cpanel::JSON::XS = 0
+
+[Prereqs / testreqs]
+-phase = test
+-type = requires
+Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
+Dist::Zilla::Plugin::ModuleBuild = 0
+Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
+Module::Build = 0
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0
+
 [MetaConfig / @Author::KENTNL/MetaConfig]
 
 [GithubMeta / @Author::KENTNL/GithubMeta]
@@ -155,7 +240,14 @@ tweet_url = https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{
 url_shortener = none
 
 [Prereqs::Upgrade / @Author::KENTNL/Prereqs::Upgrade]
+Dist::Zila::Plugin::MetaProvides::Package = 2.000000
+Dist::Zilla = 5
 ExtUtils::MakeMaker = 7.00
+File::ShareDir::Install = 0.10
+Moo = 1.000008
+Moose = 2.000
+Path::Tiny = 0.058
+Test::File::ShareDir = 1.000000
 Test::More = 0.99
 
 [Prereqs::Recommend::MatchInstalled / @Author::KENTNL/always_latest_develop_bundle]
@@ -165,6 +257,7 @@ modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
+;[Prereqs::SyncVersions]
 -phase = runtime
 -relationship = requires
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
@@ -214,91 +307,5 @@ Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
-
-[Prereqs]
-Dist::Zilla = 5.011
-
-[Prereqs / config_reqs]
--phase = configure
--relationship = requires
-File::ShareDir::Install = 0.10
-
-[Prereqs / softdeps]
--phase = runtime
--type = recommends
-Dist::Zilla::Plugin::Bootstrap::lib = 0.04000002
-Dist::Zilla::Plugin::PerlTidy = 0.14
-Dist::Zilla::Util::EmulatePhase = 0.01025803
-IO::Socket::SSL = 1.962
-LWP::Protocol::https = 6.04
-Moose = 2.1201
-MooseX::Has::Sugar = 1.000000
-MooseX::Types = 0.41
-Net::SSLeay = 1.57
-Perl::PrereqScanner = 1.019
-Pod::Coverage::TrustPod = 0.100003
-Pod::Elemental::PerlMunger = 0.200001
-Test::CPAN::Meta = 0.23
-Test::Pod = 1.48
-Test::Pod::Coverage = 1.08
-Test::EOL = 1.5
-namespace::autoclean = 0.15
-Test::Perl::Critic = 1.02
-
-[ModuleShareDirs]
-Dist::Zilla::MintingProfile::Author::KENTNL = share/profiles
-
-[RemovePhasedPrereqs]
-remove_runtime = Dist::Zilla::PluginBundle::Author::KENTNL
-remove_runtime = Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
-remove_develop = Dist::Zilla::PluginBundle::Author::KENTNL
-remove_develop = Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
-
-[Prereqs / criticspreqs]
-;Perl::Critic::Moose = 0.999_002
--phase = runtime
--type = recommends
-Perl::Critic::Itch = 0
-Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter = 0
-Perl::Critic::Pulp = 0
-Perl::Critic::More = 0
-Perl::Critic::Tics = 0
-Perl::Critic::StricterSubs = 0
-Perl::Critic::Deprecated = 0
-Perl::Critic::Lax = 0
-Perl::Critic::Compatibility = 0
-Perl::Critic::Swift = 0
-Perl::Critic::Bangs = 0
-
-[Prereqs / conditionalpreqs]
--phase = runtime
--type = recommends
-Dist::Zilla::Plugin::MakeMaker = 0
-Dist::Zilla::Plugin::ModuleBuild = 0
-Dist::Zilla::Plugin::ModuleBuildTiny = 0
-Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
-Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
-Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
-CHI = 0
-CHI::Driver::LMDB = 0
-LMDB_File = 0
-CPAN::Meta = 0
-CPAN::Meta::Prereqs::Diff = 0
-CPAN::Changes::Group::Dependencies::Stats = 0.002002
-CPAN::Changes::Dependencies::Details = 0.001000
-Data::Serializer::Sereal = 0
-Net::GitHub = 0
-JSON::MaybeXS = 0
-Cpanel::JSON::XS = 0
-
-[Prereqs / testreqs]
-;[Prereqs::SyncVersions]
--phase = test
--type = requires
-Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
-Dist::Zilla::Plugin::ModuleBuild = 0
-Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
-Module::Build = 0
-Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0
 
 [CheckPrereqsIndexed]
