@@ -514,9 +514,19 @@ sub _configure_toolkit_prereqs {
       },
     );
   }
-  if ( 'soft' eq $self->toolkit_hardness ) {
-    $self->add_plugin( 'Prereqs::Upgrade' => { %{$extra_match_installed}, }, );
-  }
+
+  $self->add_plugin(
+    'Prereqs::Upgrade' => {
+      %{$extra_match_installed},
+      'Moose'                                     => '2.000',       # Module::Runtime crap
+      'Moo'                                       => '1.000008',    # lazy_build => sub
+      'Path::Tiny'                                => '0.058',       # ->sibling
+      'File::ShareDir::Install'                   => '0.10',        # dotfiles
+      'Dist::Zilla'                               => '5',           # encoding
+      'Test::File::ShareDir'                      => '1.000000',    # 5.8 version compat
+      'Dist::Zila::Plugin::MetaProvides::Package' => '2.000000',    # sane version
+    },
+  );
 
   my $applymap = [ 'develop.requires = develop.requires', ];
 
