@@ -4,13 +4,15 @@
  [Dependencies::Stats]
  - Dependencies changed since 2.023001, see misc/*.deps* for details
  - configure: (recommends: ↓1)
- - develop: +1 ↓56 -1 (recommends: ↓1)
+ - develop: +1 ↓56 -1 (recommends: ↓1, suggests: +1)
  - runtime: +1 ↓59 -16 (recommends: +18)
- - test: ↓11 (recommends: ↓3)
+ - test: ↓11 (recommends: +2 ↓3)
 
  [Features]
  - Use a less aggressive technique for recommending newer EUMM/TB to be slightly more stable and do 99% of what I mean
    without so much commit churn.
+ - Selected packages auto-recommend selected versions as implied upgrade ( much more preceise and less	      automatic
+   than all my random 'MatchInstalled' rubbish
 
  [Packaging]
  - Moved a boatload of hard required deps that were really mostly recommendations to where they belong.
